--- a/index.html
+++ b/index.html
@@ -5,8 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecommerce Website Design</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
+   <div class="header">
+    <div class="container">
+        <div class="navbar">
+            <div class="logo">
+                <img src="images/logo.png" width="125px" alt="Logo Images">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href=""></a>Home</li>
+                    <li><a href=""></a>Products</li>
+                    <li><a href=""></a>About</li>
+                    <li><a href=""></a>Contact</li>
+                    <li><a href=""></a>Account</li>
+                </ul>
+            </nav>
+            <img src="images/cart.png" width="30px" hight="30px">
     
+           </div>
+           <div class="row">
+            <div class="col-2">
+                <h1>Give You Workout <br>A New Style!</h1>
+                <p>Success isn't always about greatness. It's about consistency. Consistent ,<br> hard work gains succeess. Greatness will come</p>
+                <a href="" class="btn">Explore Now &#8594;</a>
+            </div>
+            <div class="col-2">
+                <img src="images/image1.png">
+            </div>
+           </div> 
+       </div>
+   </div>
 </body>
 </html>
