--- a/index.html
+++ b/index.html
@@ -212,6 +212,23 @@
         </div>
     </div>
    </div>
+   <!-- -----------------------offer--------------- -->
+   <div class="offer">
+    <div class="small-container">
+        <div class="row">
+            <div class="col-2">
+                <img src="images/exclusive.png" class="offer-ing">
+            </div>
+            <div class="col-2">
+                <p>Exclusively Available on Redstore</p>
+                <h1>Smart Band 4</h1>
+                <small>The Mi smart Band 4 features a 39.9% larger (than Mi Band 3 ) AMoLED color full-touch display with adjustable brightness, so everything is clear as can be.</small><br>
+                <a href="#"class="btn">Buy Now &#8594;</a>
+            </div>
+        </div>
+    </div>
+   </div>
+   <!-- -------------------- offer end ------------------ -->
 
 </body>
 </html>
