--- a/index.html
+++ b/index.html
@@ -229,6 +229,54 @@
     </div>
    </div>
    <!-- -------------------- offer end ------------------ -->
+   <!-- ----------------------- testimonial --------------- -->
+   <div class="testimonial">
+    <div class="small-container">
+        <div class="row">
+            <div class="col-3">
+                <i class="fa-solid fa-quote-left"></i>
+                <p>Lorem Ipsum is simpy dummy text of the printing and typeseting industry. lorem Ipsum has been the industry's standard dummy text ever</p>
+                <div class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                </div>
+                <img src="images/user-1.png">
+                <h3>Sean Parker</h3>
+            </div>
+            <div class="col-3">
+                <i class="fa-solid fa-quote-left"></i>
+                <p>Lorem Ipsum is simpy dummy text of the printing and typeseting industry. lorem Ipsum has been the industry's standard dummy text ever</p>
+                <div class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                </div>
+                <img src="images/user-2.png">
+                <h3>Sean Parker</h3>
+            </div>
+            <div class="col-3">
+                <i class="fa-solid fa-quote-left"></i>
+                <p>Lorem Ipsum is simpy dummy text of the printing and typeseting industry. lorem Ipsum has been the industry's standard dummy text ever</p>
+                <div class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                </div>
+                <img src="images/user-3.png">
+                <h3>Sean Parker</h3>
+            </div>
+        </div>
+    </div>
+   </div>
+   <!-- ------------------------brands---------------------- -->
+
 
 </body>
 </html>
