--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
         <div class="navbar">
             <div class="logo">
                 <img src="images/logo.png" width="125px" alt="Logo Images">
-                <img src="images/menu.png" class="menu-icon">
             </div>
             <nav>
-                <ul>
-                    <li><a href=""></a>Home</li>
-                    <li><a href=""></a>Products</li>
-                    <li><a href=""></a>About</li>
-                    <li><a href=""></a>Contact</li>
-                    <li><a href=""></a>Account</li>
+                <ul id="MenuItems">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Products</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">Account</a></li>
                 </ul>
             </nav>
             <img src="images/cart.png" width="30px" hight="30px">
+            <img src="images/menu.png" class="menu-icon" onclick="menutoggle()">
     
            </div>
            <div class="row">
@@ -337,6 +337,21 @@
             <p class="copyright">Copyright 2023 - Easy Tutorials</p>
         </div>
     </div>
+    <!-- -------------js for toggle menu--------------   -->
+    <script>
+        var MenuItems = document.getElementById("MenuItems");
+        MenuItems.style.maxHeight = "0px";
+        function menutoggle(){
+            if(MenuItems.style.maxHeight == "0px")
+            {
+                MenuItems.style.maxHeight = "200px";
+            }
+            else
+            {
+                MenuItems.style.maxHeight = "0px";
+            }
+        }
+    </script>
 
 
 </body>
